--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
-    "postinstall": "prisma generate",
+    "build": "next build",
+    "start": "yarn build && next start",
     "lint": "next lint",
-    "start": "next start"
+    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "test": "jest",
+    "test-watch": "jest --watch",
+    "test-coverage": "jest --coverage"
   },
   "dependencies": {
+    "@kputnins/scrabble-ai-alphabet": "^0.0.6",
+    "@kputnins/scrabble-ai-game": "^0.12.2",
     "@liene-putnina/react-components-for-you": "^1.3.1",
     "@prisma/client": "^4.11.0",
     "@t3-oss/env-nextjs": "^0.2.1",
@@ -39,6 +44,8 @@
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "prisma": "^4.11.0",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
   },
