--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test-coverage": "jest --coverage"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.18.4",
     "@kputnins/scrabble-ai-alphabet": "^0.0.6",
     "@kputnins/scrabble-ai-game": "^0.12.2",
     "@liene-putnina/react-components-for-you": "^1.3.1",
