--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
+    "build": "next build",
+    "start": "yarn build && next start",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "test": "jest",
+    "test-watch": "jest --watch",
+    "test-coverage": "jest --coverage"
   },
   "dependencies": {
-    "@liene-putnina/react-components-for-you": "^1.3.1",
+    "@clerk/nextjs": "^4.18.4",
+    "@kputnins/scrabble-ai-alphabet": "^0.0.6",
+    "@kputnins/scrabble-ai-game": "^0.12.2",
+    "@liene-putnina/react-components-for-you": "^1.6.0",
     "@prisma/client": "^4.11.0",
     "@t3-oss/env-nextjs": "^0.2.1",
     "@tanstack/react-query": "^4.28.0",
@@ -25,6 +32,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@liene-putnina/eslint-config-lintmyride": "^1.3.0",
     "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
@@ -39,6 +47,8 @@
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "prisma": "^4.11.0",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
   },
